// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr dJVrKW"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS cwgwdo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS gTyxVL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-doOioq jocOcn"
      >
        <button
          className="sc-buvPDS bzFrFN"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr cpQEGq"
      size="small"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS beJQHt"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS dEPkHy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-doOioq jocOcn"
      >
        <button
          className="sc-buvPDS mFmsM"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS cwgwdo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS cwgwdo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS gTyxVL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS cwgwdo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS gTyxVL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-doOioq jocOcn"
      >
        <button
          className="sc-buvPDS bzFrFN"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS cwgwdo"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-doOioq jocOcn"
      >
        <button
          className="sc-buvPDS bzFrFN"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS gTyxVL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS gTyxVL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-doOioq jocOcn"
      >
        <button
          className="sc-buvPDS bzFrFN"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS beJQHt"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS beJQHt"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS dEPkHy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS beJQHt"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS dEPkHy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-doOioq jocOcn"
      >
        <button
          className="sc-buvPDS mFmsM"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS beJQHt"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-doOioq jocOcn"
      >
        <button
          className="sc-buvPDS mFmsM"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS dEPkHy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-stxIr hIeStk"
    >
      <div
        className="sc-futREh dnuzmL"
      >
        <div
          className="sc-doOioq jocOcn"
        >
          <button
            className="sc-buvPDS dEPkHy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-bkzQlO bysHDj"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-doOioq jocOcn"
      >
        <button
          className="sc-buvPDS mFmsM"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
